# ripcalc

./: AGENTS.md  Cargo.toml  README.md  TODO.md  build.rs  flake.nix
.github/workflows/: release.yml
docs/: book.toml
docs/src/: SUMMARY.md  comparison.md  development.md  index.md  installation.md  license.md  modules.md  packaging.md  usage.md
scripts/: install-completions.sh  install-manpage.sh
src/: cli.rs  dns.rs  interface.rs  ipv4.rs  ipv6.rs  main.rs  output.rs
tests/: golden_compare.rs  integration_tests.rs
tests/sipcalc_golden/: invalid_format.txt  ipv4_all_bitmaps.txt  ipv4_all_info.txt  ipv4_all_options.txt  ipv4_bitmap_classful.txt  ipv4_bitmap_wildcard.txt  ipv4_boundary_all.txt  ipv4_boundary_single.txt  ipv4_broadcast_network.txt  ipv4_cidr_bitmap.txt  ipv4_class_a_private.txt  ipv4_class_b_boundary.txt  ipv4_class_b_private.txt  ipv4_class_c_private.txt  ipv4_classful.txt  ipv4_classful_bitmap.txt  ipv4_classful_wildcard.txt  ipv4_default_cidr.txt  ipv4_dotted_decimal.txt  ipv4_explicit_hex.txt  ipv4_explicit_type.txt  ipv4_extra.txt  ipv4_extra_n0_subnet24.txt  ipv4_extra_n0_subnet25.txt  ipv4_extra_n0_subnet26.txt  ipv4_extra_n0_subnet28.txt  ipv4_extra_n0_subnet32.txt  ipv4_extra_n2_class_b.txt  ipv4_extra_n5_large.txt  ipv4_extra_with_bitmap.txt  ipv4_hex_mask.txt  ipv4_hex_no_prefix.txt  ipv4_host_all_info.txt  ipv4_invalid_octets.txt  ipv4_invalid_prefix.txt  ipv4_multiple_flags.txt  ipv4_multiple_inputs.txt  ipv4_point_to_point.txt  ipv4_private_class_a.txt  ipv4_private_class_b.txt  (+36 more)
