[package]
name = "ripcalc"
version = "0.1.0"
edition = "2024"
description = "A Rust-based subnet calculator that replicates and extends sipcalc functionality"
license = "MIT"

[[bin]]
name = "ripcalc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ipnetwork = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
get_if_addrs = "0.5"
anyhow = "1.0"
dns-lookup = "2.0"
bitflags = "2"
